--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.junit-4.2.jar=C:\\Users\\Juan\\projects\\junit-4.2.jar
+file.reference.junit-4.2.jar-1=junit-4.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +45,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${file.reference.junit-4.2.jar}
+    ${file.reference.junit-4.2.jar}:\
+    ${file.reference.junit-4.2.jar-1}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
